Add dictionary popup tap any word for definition

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ input[type=range].speed-slider::-webkit-slider-thumb:hover { border-color: var(-
 .spin-label { font-family: 'Fredoka'; font-size: 1.2rem; color: var(--purple); }
 .ai-badge { display: inline-block; background: linear-gradient(135deg, var(--purple), var(--purple-deep)); color: white; font-size: 0.65rem; font-weight: 800; letter-spacing: 1px; padding: 3px 10px; border-radius: 20px; text-transform: uppercase; margin-left: 8px; vertical-align: middle; }
 
-.hint-tip { text-align: center; font-size: 0.75rem; color: var(--muted); font-weight: 700; margin: 10px 0; padding: 8px 12px; background: var(--section); border-radius: 12px; }
+.hint-tip { text-align: center; font-size: 0.85rem; color: var(--purple-deep); font-weight: 800; margin: 10px 0; padding: 10px 14px; background: linear-gradient(135deg, #f3e8ff, #e8d5ff); border: 2px solid var(--purple-light); border-radius: 14px; box-shadow: 0 2px 8px rgba(74,26,107,0.1); }
 
 /* ── Bedtime Mode ── */
 body.bedtime { background: #1a1a2e; color: #F0EBE0; }
@@ -236,7 +236,7 @@ footer strong { color: var(--purple-deep); }
 body.bedtime footer { color: #6060a0; }
 body.bedtime footer strong { color: #9070c0; }
 body.bedtime .bg .blob { opacity: 0.03; }
-body.bedtime .hint-tip { background: #2a2a48; color: #8080a8; }
+body.bedtime .hint-tip { background: linear-gradient(135deg, #2a1a4a, #1e1040); color: #c090e0; border-color: #5a3a8a; }
 body.bedtime .encouragement { background: #2a2a48; color: #d0c8e8; }
 
 .bedtime-toggle { position: absolute; right: 0; top: 50%; transform: translateY(-50%); background: none; border: none; font-size: 1.4rem; cursor: pointer; padding: 4px 8px; border-radius: 10px; transition: background 0.2s; }
