--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@ body.bedtime .dict-speaker-btn { background: #2a1a4a; border-color: #7a4aaa; col
         </button>
         <button class="cat-btn" data-cat="confidence">
           <svg viewBox="0 0 40 40" fill="none"><circle cx="20" cy="20" r="14" fill="#C9A0DC" opacity="0.2"/><path d="M20 8l2.5 7.5H30l-6.5 4.5 2.5 7.5L20 23l-6 4.5 2.5-7.5L10 15.5h7.5L20 8z" fill="#9B30FF" stroke="#6B2D8B" stroke-width="1"/><circle cx="20" cy="20" r="3" fill="#FFD93D"/></svg>
-          Confidence
+          I Can Do It!
         </button>
         <button class="cat-btn" data-cat="blackhistory">
           <svg viewBox="0 0 40 40" fill="none"><circle cx="20" cy="20" r="13" fill="#4A1A6B" opacity="0.15"/><path d="M20 8c-6.6 0-12 5.4-12 12s5.4 12 12 12 12-5.4 12-12S26.6 8 20 8z" fill="#9B30FF" opacity="0.85"/><path d="M15 20l3 3 7-7" stroke="#FFD93D" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/></svg>
@@ -500,11 +500,31 @@ body.bedtime .dict-speaker-btn { background: #2a1a4a; border-color: #7a4aaa; col
         </button>
         <button class="cat-btn" data-cat="nature">
           <svg viewBox="0 0 40 40" fill="none"><circle cx="20" cy="12" r="6" fill="#FFD93D" opacity="0.9"/><path d="M8 28c2-8 5-12 12-12s10 4 12 12" fill="#6BCB77" opacity="0.8"/><path d="M20 16v12" stroke="#6B2D8B" stroke-width="2" stroke-linecap="round"/><path d="M14 32h12" stroke="#6B2D8B" stroke-width="2" stroke-linecap="round"/><circle cx="10" cy="16" r="3" fill="#9B30FF" opacity="0.4"/><circle cx="32" cy="20" r="2" fill="#9B30FF" opacity="0.3"/></svg>
-          Nature
+          Outside
         </button>
         <button class="cat-btn" data-cat="emotions">
           <svg viewBox="0 0 40 40" fill="none"><circle cx="20" cy="20" r="13" fill="#C9A0DC" opacity="0.25"/><circle cx="20" cy="20" r="10" fill="#9B30FF" opacity="0.85"/><circle cx="16" cy="17" r="1.8" fill="#fff"/><circle cx="24" cy="17" r="1.8" fill="#fff"/><path d="M14 24c1.5 2.5 10.5 2.5 12 0" stroke="#fff" stroke-width="2" stroke-linecap="round" fill="none"/><circle cx="28" cy="10" r="2" fill="#FFD93D"/><path d="M26 8l3-2M30 10l2-1" stroke="#FFD93D" stroke-width="1" stroke-linecap="round"/></svg>
-          Emotions
+          Feelings
+        </button>
+        <button class="cat-btn" data-cat="trucks">
+          <svg viewBox="0 0 40 40" fill="none"><rect x="4" y="16" width="22" height="12" rx="2" fill="#9B30FF"/><rect x="26" y="20" width="10" height="8" rx="2" fill="#6B2D8B"/><rect x="28" y="22" width="6" height="4" rx="1" fill="#C9A0DC" opacity="0.5"/><circle cx="11" cy="30" r="3" fill="#4A1A6B" stroke="#C9A0DC" stroke-width="1.5"/><circle cx="31" cy="30" r="3" fill="#4A1A6B" stroke="#C9A0DC" stroke-width="1.5"/><rect x="6" y="18" width="8" height="5" rx="1" fill="#FFD93D" opacity="0.6"/></svg>
+          Trucks
+        </button>
+        <button class="cat-btn" data-cat="princesses">
+          <svg viewBox="0 0 40 40" fill="none"><path d="M20 6l-8 12h16L20 6z" fill="#FFD93D"/><circle cx="20" cy="6" r="2" fill="#9B30FF"/><circle cx="14" cy="14" r="1.5" fill="#9B30FF"/><circle cx="26" cy="14" r="1.5" fill="#9B30FF"/><rect x="10" y="18" width="20" height="16" rx="3" fill="#9B30FF"/><rect x="14" y="24" width="5" height="10" rx="1" fill="#6B2D8B"/><path d="M24 22v6" stroke="#FFD93D" stroke-width="1.5" stroke-linecap="round"/><path d="M22 25h4" stroke="#FFD93D" stroke-width="1.5" stroke-linecap="round"/></svg>
+          Princesses
+        </button>
+        <button class="cat-btn" data-cat="robots">
+          <svg viewBox="0 0 40 40" fill="none"><rect x="12" y="14" width="16" height="16" rx="3" fill="#9B30FF"/><rect x="15" y="6" width="10" height="8" rx="3" fill="#6B2D8B"/><circle cx="18" cy="10" r="1.5" fill="#FFD93D"/><circle cx="22" cy="10" r="1.5" fill="#FFD93D"/><rect x="8" y="18" width="4" height="8" rx="2" fill="#C9A0DC"/><rect x="28" y="18" width="4" height="8" rx="2" fill="#C9A0DC"/><rect x="16" y="32" width="3" height="4" rx="1" fill="#6B2D8B"/><rect x="21" y="32" width="3" height="4" rx="1" fill="#6B2D8B"/><path d="M20 4v-2" stroke="#FFD93D" stroke-width="2" stroke-linecap="round"/><circle cx="20" cy="1" r="1.5" fill="#FFD93D"/><rect x="16" y="20" width="8" height="3" rx="1" fill="#C9A0DC" opacity="0.5"/></svg>
+          Robots
+        </button>
+        <button class="cat-btn" data-cat="pirates">
+          <svg viewBox="0 0 40 40" fill="none"><path d="M6 28c2-6 8-10 14-10s12 4 14 10" fill="#6B2D8B" opacity="0.3"/><path d="M8 30h24l-2 4H10l-2-4z" fill="#6B2D8B"/><path d="M20 8v20" stroke="#4A1A6B" stroke-width="2.5" stroke-linecap="round"/><path d="M20 8c6 0 10 3 10 6H20V8z" fill="#9B30FF"/><path d="M16 10l-2-3M24 10l2-3" stroke="#FFD93D" stroke-width="1.5" stroke-linecap="round"/><circle cx="20" cy="22" r="4" fill="#FFD93D" opacity="0.6"/><path d="M18 21l4 2M22 21l-4 2" stroke="#4A1A6B" stroke-width="1.5" stroke-linecap="round"/></svg>
+          Pirates
+        </button>
+        <button class="cat-btn" data-cat="airplanes">
+          <svg viewBox="0 0 40 40" fill="none"><ellipse cx="20" cy="20" rx="16" ry="4" fill="#C9A0DC" opacity="0.2"/><path d="M6 20h28" stroke="#9B30FF" stroke-width="2.5" stroke-linecap="round"/><path d="M20 20l-6-8h-4l3 8-3 8h4l6-8z" fill="#9B30FF"/><path d="M20 20l8-4h4l-3 4 3 4h-4l-8-4z" fill="#6B2D8B"/><circle cx="20" cy="20" r="2" fill="#FFD93D"/><path d="M18 18l-2-6M22 18l2-6" stroke="#C9A0DC" stroke-width="1" stroke-linecap="round"/></svg>
+          Airplanes
         </button>
       </div>
       <button class="btn-main" id="btn-generate">✨ Make My Story!</button>
@@ -818,7 +838,9 @@ async function generateAIStory(grade, category, wordTarget) {
     animals: "Animals", space: "Space", dinosaurs: "Dinosaurs", ocean: "Ocean",
     superheroes: "Superheroes", magic: "Magic", sports: "Sports", cooking: "Cooking",
     friends: "Friends", confidence: "Self-Confidence", blackhistory: "Black History Heroes",
-    helpers: "Community Helpers", nature: "Nature & Weather", emotions: "Feelings & Emotions"
+    helpers: "Community Helpers", nature: "Nature & Weather", emotions: "Feelings & Emotions",
+    trucks: "Trucks & Vehicles", princesses: "Princesses & Castles", robots: "Robots",
+    pirates: "Pirates", airplanes: "Airplanes & Flying"
   };
   const topicLabel = topicNames[category] || category;
 
@@ -837,7 +859,12 @@ async function generateAIStory(grade, category, wordTarget) {
     blackhistory: "Use a brave hero named Rosa or Mae who did something great.",
     helpers: "Use a firefighter, doctor, or teacher as the main character.",
     nature: "Use the sun, rain, or a tree as the main focus.",
-    emotions: "Use a child who feels happy, sad, or brave."
+    emotions: "Use a child who feels happy, sad, or brave.",
+    trucks: "Use a big truck, fire engine, or race car as the main focus.",
+    princesses: "Use a brave princess or prince in a castle as the main character.",
+    robots: "Use a friendly robot who helps or learns as the main character.",
+    pirates: "Use a pirate on a ship looking for treasure as the main character.",
+    airplanes: "Use an airplane, pilot, or flying adventure as the main focus."
   };
   const topicAnchor = topicAnchors[category] || `Write about ${topicLabel}.`;
 
@@ -846,11 +873,9 @@ async function generateAIStory(grade, category, wordTarget) {
 
 STRICT RULES:
 - Every sentence must be 3-5 words MAXIMUM
-- Use ONLY CVC words (consonant-vowel-consonant) and basic sight words: cat, dog, big, run, sit, red, hot, fun, hop, the, is, a, I, my, to, we, see, go, up, in, on, can, and, it
-- Single syllable words ONLY — no exceptions except character names
-- Use repetitive sentence patterns: "I see a cat. I see a dog. I see a fish."
-- NO blends, NO digraphs (no sh, ch, th words), NO long vowel words
-- Dolch Pre-Primer words are okay: a, I, the, is, it, my, to, we, see, go, up, in, on, can, and, run, big, red, one, two
+- Use ONLY simple one-syllable words: big, run, sit, red, the, is, a, I, my, see, like, can, we, it, go, up, on, fun, hop, hot, has, his, her, they, are, said, good, love, help, kind, brave
+- Use repetitive sentence patterns: "She is brave. She is kind. She is good."
+- NO complex ideas, NO multi-syllable words except names
 - End with: "Think about it: What do you see?"
 Write exactly ${wordTarget} words.`,
 
@@ -858,59 +883,15 @@ Write exactly ${wordTarget} words.`,
 
 STRICT RULES:
 - Sentences must be 5-8 words maximum
-- CVC words are the base, plus beginning consonant blends allowed (stop, flag, trip)
-- Digraphs allowed: sh, ch, th (she, the, that, fish, shop)
-- Short vowel words dominate — limit long vowel words
-- Two-syllable words allowed but keep them simple: happy, funny, little, into, upon
-- NO words longer than 2 syllables
-- Use Dolch Primer sight words: he, she, was, with, said, have, like, this, will, what, come, look, make, play
+- Use simple common words only — no words longer than 2 syllables
 - Short paragraphs of 2-3 sentences
 - Keep the topic clearly present throughout the story
-- End with: "Think about it: What would you do?"
+- End with a simple question: "Think about it: What would you do?"
 Write exactly ${wordTarget} words.`,
 
-    "1": `You are writing for a 6-7 year old in 1st grade. Topic: ${topicLabel}.
-
-PHONICS RULES:
-- Long vowel patterns allowed: silent-e words (make, ride, home, cake), vowel teams (rain, boat, eat, day)
-- All consonant blends allowed: bl, cr, st, gr, fl, sp, tr, etc.
-- R-controlled vowels allowed: car, her, bird, for, turn
-- Common word families: -ight (night, light), -ound (found, round), -ake (make, lake)
-- Two-syllable words common, three-syllable words rare
-- Simple contractions allowed: don't, can't, it's, I'm
-- Sentences 8-12 words, flowing into paragraphs of 3-4 sentences
-- Tell a simple story with a clear beginning, middle, and end
-- Make it warm, fun, and easy to follow
-- Do NOT use bullet points, lists, or markdown formatting
-- End with one "Think about it:" question.`,
-
-    "2": `You are writing for a 7-8 year old in 2nd grade. Topic: ${topicLabel}.
-
-PHONICS & VOCABULARY RULES:
-- Multi-syllable words welcome (3 syllables okay): beautiful, adventure, important, wonderful
-- Prefixes and suffixes encouraged: un-, re-, -ing, -ed, -ly, -ful, -ness
-- Silent letter words allowed: know, write, climb, knight
-- Irregular spellings allowed: through, thought, enough, friend
-- Include dialogue between characters using quotation marks
-- Varied sentence length (6-15 words) with descriptive language
-- Include feelings and emotions in the characters
-- Write in flowing paragraphs with sentences of different lengths
-- Do NOT use bullet points, lists, or markdown formatting
-- End with one "Think about it:" question.`,
-
-    "3": `You are writing for an 8-9 year old in 3rd grade. Topic: ${topicLabel}.
-
-PHONICS & VOCABULARY RULES:
-- Complex multi-syllable words encouraged: mysterious, extraordinary, investigate, experiment
-- Latin/Greek roots welcome: tele-, auto-, micro-, -ology, -tion, -sion
-- Figurative language encouraged: use similes ("fast as a cheetah") and simple metaphors
-- Context clues — introduce one or two challenging words and let the sentence explain their meaning
-- Complex sentences with conjunctions: although, however, because, meanwhile, eventually
-- Paragraphs should have clear topic sentences and supporting details
-- Introduce some academic vocabulary naturally in the story
-- Varied sentence structure mixing short punchy sentences with longer descriptive ones
-- Do NOT use bullet points, lists, or markdown formatting
-- End with one "Think about it:" question.`
+    "1": `Use very simple words a 6-7 year old knows. Write about ${topicLabel}. Write in short natural sentences that flow into paragraphs. Tell a simple story with a clear beginning, middle, and end. Make it warm, fun, and easy to follow. Do NOT use bullet points or lists. End with one "Think about it:" question.`,
+    "2": `Use simple but varied vocabulary for a 7-8 year old. Write about ${topicLabel}. Write in flowing paragraphs with sentences of different lengths. Include some description and feeling. Do NOT use bullet points or lists. End with one "Think about it:" question.`,
+    "3": `Use grade-appropriate vocabulary for an 8-9 year old. Write about ${topicLabel}. Write in natural paragraphs with varied sentence structure. Include interesting details and a clear message. Do NOT use bullet points or lists. End with one "Think about it:" question.`
   };
 
   const instructions = gradeInstructions[grade] || gradeInstructions["1"];
@@ -1328,7 +1309,7 @@ async function loadStory() {
       generateAIStory(S.grade, S.category, S.wordTarget),
       aiTimeout
     ]);
-    const TOPIC_NAMES = { animals:"Animals", space:"Space", dinosaurs:"Dinosaurs", ocean:"Ocean", superheroes:"Superheroes", magic:"Magic", sports:"Sports", cooking:"Cooking", friends:"Friends", confidence:"Self-Confidence", blackhistory:"Black History Heroes", helpers:"Community Helpers", nature:"Nature & Weather", emotions:"Feelings & Emotions" };
+    const TOPIC_NAMES = { animals:"Animals", space:"Space", dinosaurs:"Dinosaurs", ocean:"Ocean", superheroes:"Superheroes", magic:"Magic", sports:"Sports", cooking:"Cooking", friends:"Friends", confidence:"Self-Confidence", blackhistory:"Black History Heroes", helpers:"Community Helpers", nature:"Nature & Weather", emotions:"Feelings & Emotions", trucks:"Trucks & Vehicles", princesses:"Princesses & Castles", robots:"Robots", pirates:"Pirates", airplanes:"Airplanes & Flying" };
     S.storyTitle = `✨ ${TOPIC_NAMES[S.category] || S.category} Story`;
     S.story = cleanStoryText(aiText);
     S.isAIStory = true;
